# CppPatterns

./: CMakeLists.txt  ReadMe.md
app/: CMakeLists.txt  app.cpp  genStatistic.cpp
data/: stats.txt
patterns/: CMakeLists.txt
patterns/include/: fastPatternResolver.h  patternResolver.h
patterns/include/misc/: CombinatoricsData.h  PatternBuilder.h  combinatorics.h
patterns/src/: fastPatternResolver.cpp  patternResolver.cpp
patterns/src/misc/: CombinatoricsData.cpp  PatternBuilder.cpp  combinatorics.cpp
patterns/tests/: combinatoricsTest.cpp  fastPatternResolver2Test.cpp  fastPatternResolverTest.cpp  patternResolverTest.cpp  permutationResolverTest.cpp
